tests/paczka1/small_fuzzy/89544058.err
Error in line 5: S553 S230 6,6
Error in line 8: S553 S553 76,6
